# graphql-sketch

./: Cargo.toml  justfile
backend/: Cargo.toml
backend/src/: error.rs  main.rs  state.rs
backend/src/graphql/: loader.rs  mod.rs
backend/src/graphql/schema/: mod.rs  types.rs
backend/src/routes/: graphql.rs  mod.rs  utils.rs
frontend/: index.html  style.css
shared_types/src/: lib.rs
