[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[features]
lock_users = []
specific_login_errors = []

[dependencies]
# API types
shared_types = { path = "../shared_types" }
# Configuration
dotenv = "*"
# The base web serving
hyper = { version = "*", features = ["full"] }
tokio = { version = "*", features = ["full"] }
futures = "*"
serde = { version = "*", features = ["derive"] } # We let chrono decide the exact version
serde_json = "*"
serde_urlencoded = "*"
# Database interaction
sqlx = { version = "*", features = ["runtime-tokio-rustls", "migrate", "macros", "chrono", "postgres"] }
chrono = { version = "*", features = ["serde"] }
# Password hashing and verification
argon2 = "*"
rand = "*"
rand_core = { version = "*", features = ["std"] }
nanoid = "*"
# Graphql implementation
async-graphql = { git = "https://github.com/danielhenrymantilla/async-graphql.git", branch = "workaround-for-1-62-bug", features = ["dataloader"] }
mongodb = "*"
bson = "*"

